Spacing fixes

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -147,8 +147,8 @@ a {
   background-color: #789461;
   color: white;
 
-  min-height: 75%;
-  max-height: 75%;
+  min-height: 72%;
+  max-height: 72%;
   overflow-y: hidden;
 }
 
@@ -201,5 +201,6 @@ a {
 #selectorContainer {
   width: 100%;
   padding-left: auto;
+  padding-bottom: 0.5em;
   text-align: center;
 }
